syntax = "proto3";
package mvirt.log;

service LogService {
  rpc GetVersion(GetVersionRequest) returns (VersionInfo);
  rpc Log(LogRequest) returns (LogResponse);
  rpc Query(QueryRequest) returns (stream LogEntry);
}

message GetVersionRequest {}

message VersionInfo {
  string version = 1;
}

message LogEntry {
  // Generated by server if empty. Canonical format is string for easier JSON/Debug handling,
  // but internally stored as bytes/u128.
  string id = 1; 
  int64 timestamp_ns = 2;
  
  string message = 3;
  LogLevel level = 4;
  string component = 5; // e.g. "vmm", "cli"

  // The simplified many-to-many link.
  // Any object ID mentioned here will be indexed.
  // e.g. ["vm-123", "disk-456", "req-789"]
  repeated string related_object_ids = 6;
}

message QueryRequest {
  // If set, performs a prefix scan on the index partition
  // e.g. "vm-123"
  optional string object_id = 1;
  
  // Time range filter (inclusive)
  optional int64 start_time_ns = 2;
  optional int64 end_time_ns = 3;
  
  uint32 limit = 4;
  
  // If true, the stream stays open and sends new matching logs
  bool follow = 5; 
}

enum LogLevel {
  INFO = 0;
  WARN = 1;
  ERROR = 2;
  DEBUG = 3;
  AUDIT = 4;
  NOTICE = 5;
  CRITICAL = 6;
  ALERT = 7;
  EMERGENCY = 8;
}

message LogRequest { LogEntry entry = 1; }
message LogResponse { string id = 1; }
